Fixing horizontal scrolling issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,8 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;}
+	vertical-align: baseline;
+	overflow-x: hidden;}
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -3758,6 +3759,7 @@ input, select, textarea {
 
 			#wrapper {
 				max-width: calc(100% - 2em);
+				margin: 0 auto;
 			}
 
 		}
@@ -3766,6 +3768,7 @@ input, select, textarea {
 
 			#wrapper {
 				max-width: 100%;
+				margin: 0 auto;
 			}
 
 		}
